--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,9 +12,8 @@
       }
     },
     "background": {
-      "service_worker": "dist/background.js", 
+      "service_worker": "src/background.ts",
       "type": "module"
     },
     "permissions": ["storage"]
-  }
-  
+}
