--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -9,12 +9,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/chrome": "^0.0.301",
     "@types/webextension-polyfill": "^0.12.1",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
+    "tslib": "^2.8.1",
     "webextension-polyfill": "^0.12.0"
   }
 }
