--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -16,9 +16,9 @@
   "action": {
     "default_popup": "src/popup.html",
     "default_icon": {
-      "16": "public/vite.svg",
-      "48": "public/vite.svg",
-      "128": "public/vite.svg"
+      "16": "public/icons8-clock.gif",
+      "48": "public/icons8-clock.gif",
+      "128": "public/icons8-clock.gif"
     }
   },
   "background": {
