--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "lucide-react": "^0.475.0",
     "tslib": "^2.8.1",
     "webextension-polyfill": "^0.12.0"
   }
