--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "font-awesome": "^4.7.0",
     "lucide-react": "^0.475.0",
     "tslib": "^2.8.1",
     "webextension-polyfill": "^0.12.0"
